Added Slop Juice
the Slop

--- a/src/main/resources/assets/everything/lang/en_us.json
+++ b/src/main/resources/assets/everything/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.everything.waffle": "Waffle"
+  "item.everything.waffle": "Waffle",
+  "item.everything.slop_juice": "Slop Juice",
+  "item.everything.sugar_bread": "Sugar Bread"
+
 }
